--- a/directive/checked.html
+++ b/directive/checked.html
@@ -69,7 +69,7 @@
           [dagger-demo] *checked directive (oneway decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
-        <div class="margin">2. "indeterminate", boolean type. This decorator only applies to checkbox elements. Indeterminate is true, the framework will set the checkbox to <a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/input/checkbox">indeterminate</a> state when the directive execution result is null or undefined. For example:</div>
+        <div class="margin">2. "indeterminate", boolean type. This decorator only applies to checkbox elements. If indeterminate decorator is true, the framework will set the checkbox to <a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/input/checkbox">indeterminate</a> state when the directive execution result is null or undefined. For example:</div>
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] *checked directive (indeterminate decorator)" src="https://codepen.io/dagger8224/embed/poarEOj?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/poarEOj">
           [dagger-demo] *checked directive (indeterminate decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
